# onnxscript

./: .flake8  .gitattributes  .gitignore  .lintrunner.toml  .readthedocs.yaml  =0.1.16  =0.10.7  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  aaa.onnx  azure-pipelines.yml  codegen.py  conftest.py  graphview.py  initializer.py  ir-1.ipynb  llama_check.py  noxfile.py  output.txt  pyproject.toml  pyproject_pylint.toml  requirements-dev-experiment.txt  requirements-dev.txt  requirements-onnx-weekly.txt  requirements-onnx.txt  requirements-ort-nightly.txt  requirements.txt  setup.cfg  setup.py  test.py  test_attribute_refs.py  test_gemm_matmul.py  test_pattern_matching.py  testingg.py  testtest.py  (+2 more)
.azure-pipelines/: _release-template.yml  onnxscript-release-dev.yml  publish-dev.yml  publish.yml  release-dev.yml  release.yml
.azure-pipelines/stages/: _release-template-stage.yml  release-stage.yml  release_stage.yml
.config/1espt/: PipelineAutobaseliningConfig.yml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yaml  dependabot.yml  release.yml
.github/codeql/: codeql-config.yml
.github/workflows/: arch_diff.yml  benchmark.yml  codeql-analysis.yml  golden_regen.yml  gpu_tests.yml  lint.yaml  main.yaml  main.yml  model-coverage.yml  nightly_l2.yml  pages.yaml  pages.yml  release.yaml  release.yml  release_win.yml  test.yaml  test.yml
.lintrunner/: black_isort_linter.py  convert_to_sarif.py  convert_to_sarif_test.py  flake8_linter.py  grep_linter.py  mypy_linter.py  newlines_linter.py  pip_init.py  pylint_linter.py
docs/: .gitignore  Makefile  _generate_flags_docs.py  _generate_models.py  abbreviations.md  abbreviations.rst  ai-model-support-strategy.md  cli.md  conf.py  design.md  getting-started.md  index.md  index.rst  model-catalog.md  module-architecture.md  requirements.txt  sg_execution_times.rst  update_readme.py
docs/_ext/: dashboard.py  flags_gen.py  models_gen.py
docs/_static/: logo.ai
docs/_templates/: classtemplate.rst  classtemplate_inherited.rst  functiontemplate.rst
docs/api/: apply_weights.md  base_model_config.md  build.md  build_from_gguf.md  build_from_module.md  converter.md  converter.rst  decorator.md  decorator.rst  index.md  index.rst  ir.md  model_package.md  model_registry.md  opsets.md  opsets.rst  optimizer.md  rewriter.md  rewriter_pattern.md  script.rst  testing.md  tools.md  utils.md  utils.rst  values.md  values.rst  version_converter.md
docs/articles/: index.md
docs/atenlib/: atenlib-graph-building.excalidraw
docs/design/: config-redesign.md  gguf-support-proposal.md  golden-infra-design.md  multi-tier-testing-strategy.md  perf-benchmarking.md  phi4mm-architecture.md  phi4mm-four-model-split.md  phi4mm-ort-genai-integration.md  test-infrastructure-map.md
docs/examples/: 01_plot_selu.py  02_plot_square_loss.py  03_export_lib.py  04_plot_eager_mode_evaluation.py  05_plot_model_props.py  06_plot_model_local_funs.py  README.txt  eager_mode_evaluation.py  exportlib.py  mylib.py  plot_hamming.py  plot_square_loss.py  selu.py  toy.py
docs/intermediate_representation/: getting_started.ipynb  index.md  interfaces.md  introduction.py  ir_api.md  ir_external_data.md  ir_passes.md  tensors.md
docs/ir/: build_graph.md  graph_construction.ipynb  index.md  tensors.md
docs/open/: index.md  index.rst
docs/optimizer/: optimize.md
docs/research/: testing-strategy-analysis.md
docs/rewriter/: design.md  index.md  rewrite_patterns.md
examples/: README.md  bench_model.py  build_and_save.py  custom_op_expansion.py  diffusion.py  multimodal_generation.py  nemotron_3_nano_text_generation.py  nsys_profile.py  ort_rewrite.py  pattern_matching_example.py  pattern_rewriting.py  phi4mm_multimodal.py  phi4mm_ort_genai.py  profile_analysis.py  qwen25_vl_ort_genai.py  qwen35_text_generation.py  qwen35_vl_ort_genai.py  qwen3_asr.py  qwen3_forced_aligner.py  qwen3_tts.py  qwen3_tts_voice_clone.py  qwen3_vl_ort_genai.py  static_cache_generation.py  text_generation.py
onnxscript/: __init__.py  __main__.py  _converter.py  _converter_test.py  _types.py  analysis.py  analysis_test.py  autocast.py  convert.py  converter.py  converter_test.py  debuginfo.py  eager_array.py  eager_mode_evaluator.py  eager_numpy.py  element_type.py  evaluator.py  evaluator_test.py  irbuilder.py  libfunctions.py  loop.py  main.py  onnx.py  onnx_model.py  onnx_opset.py  onnx_types.py  onnx_types_test.py  optional.py  ort_evaluator.py  shape_infer_helper.py  sourceinfo.py  tape_builder.py  tensor.py  tensor_test.py  test-output.xml  testing.py  type_annotation.py  type_annotation_test.py  utils.py  values.py  (+1 more)
opgen/: README.md  __main__.py  onnx_opset_builder.py  pygen.py  pygen_test.py
playground/: test_func.py  test_func2.py
presentations/: model-coverage-deck.md  package-lock.json  package.json
scripts/: arch_diff.py  check_new_model_coverage.py  detect_affected_models.py  detect_affected_models_test.py  generate_dashboard.py  generate_golden.py  generate_golden_test.py
testdata/: 652-129742-0006.flac  default_tolerances.yaml
tests/: README.md  _test_configs.py  arch_validation_test.py  benchmark_build.py  benchmark_compare.py  build_graph_test.py  cli_test.py  conftest.py  converter_test.py  dort_test.py  e2e_golden_test.py  eager_mode_test.py  eager_test.py  external_tensor_test.py  gguf_test.py  if_test.py  integration_test.py  issues_2024_test.py  loop_test.py  mamba2_integration_test.py  model_coverage_test.py  moe_integration_test.py  multimodal_integration_test.py  onnx_checker_test.py  onnx_types_test.py  operator_test.py  ort_genai_test.py  perf_baseline.json  phi4mm_integration_test.py  quantization_integration_test.py  seq2seq_integration_test.py  synthetic_parity_test.py  test_dort.py  vision_integration_test.py  weight_alignment_test.py  whisper_integration_test.py  yaml_schema_test.py
tools/: README.md  format.bat  format.sh  generate_ops.py  lint.sh  onnx2external.py  onnx2script.py  optimize.py  style.bat  style.sh  style_optional.bat  style_optional.sh
(+1889 files in other folders)
